prereq_map/static/prereq_map/css/base.scss
/** global styles **/
body {
  font-family: 'Open Sans', Helvetica, arial, sans-serif;
  min-width: 320px !important;
}

.prereq {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

/* prereq bar (dark) */
.prereq-bar {
  background-color: #444;
  font-size: 0.75rem;
  padding: 0 0.15rem;
}

.prereq-bar button { font-size: 0.75rem; }

.prereq-bar a {
  color: #ccc !important;

  &:hover {
    background-color: #fff;
    color: #4b2f83 !important;
  }
}

.prereq-bar .nav-item {
  border-left: dotted 1px #999;
}


/* ================== Utility Navbar Bootstrap Override ==================
.navbar-dark {
  background-color: #444;
  border: transparent;
  min-height: 2rem;
  padding-bottom: 0;
  padding-top: 0;
}

.navbar-nav > li > a,
.navbar-nav > a {
  color: #fff;
  font-size: 0.75rem;
  padding-bottom: 0.375rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.375rem;
}

.navbar-toggler {
  border: transparent;
  margin-left: -1rem;
}

.navbar-toggler:focus {
  outline: none;
}

.navbar-toggler-icon {
  border: 0;
  font-size: 0.7rem;
}

.nav-feedback {
  border-left: 0.0625rem dotted #999;
  padding-left: 0.125rem;
}

@media (min-width: 768px) {
  .navbar-dark {
    padding: 0;
  }

  .navbar-nav > li {
    border-right: 0.0625rem dotted #999;
  }

  .navbar-dark .nav-item.active .nav-link,
  .navbar-dark .nav-item:focus .nav-link,
  .navbar-dark .nav-item:hover .nav-link {
    background-color: #fff;
    color: #4b2f83;
  }
}

@media (max-width: 768px) {
  .line {
    border: 0.046875rem dotted #999;
    position: absolute;
    top: 2rem;
    width: 100%;
    z-index: 2;
  }
}

/* banner */

.prereq-banner {
  background-color: #4d307f;
  height: 7.5rem;
}

.logo-position {
  left: 1.25rem;
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
}

@media (max-width: 768px) {
  .logo-position {
    left: 1.25rem;
    position: absolute;
    top: 25%;
    transform: translate(0, -25%);
  }

  .logo-position > img {
    height: auto;
    width: 9.375rem;
  }
}

/* ================== Navigation Pills ================== */
.nav-pills {
  bottom: 0;
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
  font-size: 1.063rem;
  padding-bottom: 0;
  position: absolute;
}

.nav-pills > .nav-link {
  border-radius: 0.25rem 0.25rem 0 0;
  color: #999;
}

.nav-pills .nav-link:hover {
  background-color: #b7a57a;
  border: transparent;
  color: #404040;
}

.nav-link.active,
.nav-pills .show > .nav-link {
  background-color: #fff !important;
  color: #444 !important;
}

.prereq-content {
  flex: 1;
}

/* prereq footer */
.prereq-footer {
  background: #eee;
  border: 0;
  box-shadow: inset 0 0.25rem 0.5rem rgba(50, 50, 50, 0.2);
  height: 5.625rem;
  padding-top: 1.25rem;

}

.prereq-footer a {
  color: #2a6496;
  font-size: 0.7em;
}

.prereq-footer ul {
  list-style: outside none none;
  margin-bottom: 0.5rem;
  padding: 0;
  text-align: center;
}

.prereq-footer li {
  border-right: 0.0625rem solid #ccc;
  display: inline-block;
  margin-right: 0.3125rem;
  padding-right: 0.625rem;
}

.prereq-footer li:last-child {
  border: 0;
  margin-right: 0;
  padding-right: 0;
}

.prereq-footer .credit {
  color: #444;
  font-size: 0.7rem;
  margin-top: 0.625rem;
  text-align: center;
  width: 100%;

}

/*** comma separated list ***/
.prereq-list {
  list-style: none;
  padding: 0;
}

.prereq-list li {
  display: inline-block;
  margin-right: 5px;
}

.prereq-list li::after {
  content: ', ';
}

.prereq-list li:last-child::after {
  content: '';
}

.info-popover i {
  color: #8f9bcc;
  cursor: pointer;
  margin-left: 0.5rem;
}

/**** vue utils ***/
[v-cloak] {
  display: none;
}

/** vis styles **/
.vis-network {
  border: 1px solid rgba(0, 0, 0, 0.125);
  border-radius: 0.25rem;
}

/*** loading ***/
.pr-loading {
  color: #aaa;
  line-height: 100px;
  min-height: 100px;
  text-align: center;
}

